<resources>
    <string name="app_name">Internshp Exchange</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="do_enter">Войти</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="password_tip">Пароль должен содержать не менее 6 символов</string>
    <string name="do_register">Зарегистрироваться</string>
    <string name="network_error">Ошибка сети. Проверьте подключение к интернету</string>
    <string name="auth_error">Ошибка авторизации. Проверьте введённые данные</string>
    <string name="understand">Понятно</string>
    <string name="guide">Вы находитесь в приложении для автоматизированного поиска стажировок. Эта система предназначена как для студентов, ищущих подходящую стажировку, так и для компаний, заинтересованных в привлечении молодых специалистов на свои предприятия. Студентам стажировка предоставляет шанс проявить себя, приобрести опыт работы на реально действующем предприятии и встретиться с потенциальным работодателем. В разделе \"Стажировки\" вы можете найти все актуальные предложения от компаний с подробной информацией об условиях их проведения (сроки, длительность, место проведения, наличие оплаты, проживания и др.). Чтобы сделать свою кандидатуру более привлекательной для компании, предлагающей стажировку, Вы можете детализировать информацию о себе в разделе \"Профиль\", внося данные о наличии особых достижений, специальных навыков, опыте работы и др.. Если у Вас остались вопросы, то их можно задать в персональном чате с компанией-заявителем. Текущий статус заявок можно отслеживать в разделе \"Заявки\". Приятного использования и удачи в поиске подходящей стажировки!</string>
    <string name="has_no_acccount_tip">Нет аккаунта?</string>
    <string name="create">Создать</string>
    <string name="search_menuitem_title">Поиск</string>
    <string name="responses_menuitem_title">Отклики</string>
    <string name="messages_menuitem_title">Сообщения</string>
    <string name="profile_menuitem_title">Профиль</string>
    <string name="current_tab_name">Текущие</string>
    <string name="planned_tab_name">Планируемые</string>
    <string name="finished_tab_name">Оконченные</string>
    <string name="respond">Откликнуться</string>
    <string name="contact">Связаться</string>
    <string name="refused">Отказано</string>
    <string name="accepted">Принято</string>
    <string name="considered">Рассматривается</string>

</resources>